--- a/proj1/index.html
+++ b/proj1/index.html
@@ -205,7 +205,7 @@ compute nearby pixels and averages.
 
 <h3 align="middle">Part 7: Draw something interesting!</h3>
 
-https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj1/index.html
+<a href="https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj1/index.html">https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj1/index.html</a>
 
 </body>
 </html>
