--- a/proj1/index.html
+++ b/proj1/index.html
@@ -204,9 +204,9 @@ compute nearby pixels and averages.
 <p>If you are not participating in the optional art competition, don't worry about this section!</p>
 
 <h3 align="middle">Part 7: Draw something interesting!</h3>
-
+<div align="middle">
 <img src="screenshots/tri.png" align="middle" width="400px"/>
-
+</div>
 <a href="https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj1/index.html">https://cal-cs184-student.github.io/sp22-project-webpages-malits/proj1/index.html</a>
 
 </body>
