--- a/proj2/index.html
+++ b/proj2/index.html
@@ -24,7 +24,7 @@
 
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2022</h1>
 <h1 align="middle">Project 2: MeshEdit</h1>
-<h2 align="middle">Max Litster (3034017250) and Aidan Meyer (SID)</h2>
+<h2 align="middle">Max Litster (3034017250) and Aidan Meyer (3034773262)</h2>
 
 <br><br>
 
@@ -269,7 +269,7 @@ The following images demonstrates the effects of pre-flipping and pre-splitting 
 
 <div>
   <img src="screenshots/manual4.png" align="middle" width="500px"/>
-  <figcaption align="middle">Upsampling a cube with a high amount of initial flips and splits"</figcaption>
+  <figcaption align="middle">Upsampling a cube with a high amount of initial flips and splits</figcaption>
 </div>
 
 
